force-app/main/default/objects/RelocationShapeMaster__c/RelocationShapeMaster__c.object-meta.xml
<CustomObject>
    <label>赴任形態マスタ</label>
    <nameField>
        <label>赴任形態マスタ名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>