force-app/main/default/objects/RelocationShapeMaster__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>赴任形態マスタ</relationshipLabel>
    <relationshipName>Account_RelocationShapeMaster</relationshipName>
    <type>Lookup</type>
</CustomField>