force-app/main/default/objects/RelocationShapeMaster__c/fields/IsChild__c.field-meta.xml
<CustomField>
    <fullName>IsChild__c</fullName>
    <label>子</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>あり</fullName>
            </value>
            <value>
                <fullName>なし</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>