force-app/main/default/objects/RelocationShapeMaster__c/fields/IsMove__c.field-meta.xml
<CustomField>
    <fullName>IsMove__c</fullName>
    <defaultValue>false</defaultValue>
    <label>申請者本人入居</label>
    <type>Checkbox</type>
</CustomField>