force-app/main/default/objects/RelocationShapeMaster__c/fields/NumOfResidentFamily__c.field-meta.xml
<CustomField>
    <fullName>NumOfResidentFamily__c</fullName>
    <label>入居人数(家族)_以内</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>