force-app/main/default/objects/RelocationShapeMaster__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>IsMove__c</columns>
    <columns>NumOfResidentFamily__c</columns>
    <columns>IsSpouse__c</columns>
    <columns>IsChild__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>